Fix accounting pagination bug (#2266)
* break pagination into its own partial

* take the aggro route - make search synchronous and eliminate the specific endpt

* unit test adjustments + don't bother paginating the search, too small

* bump system tests

* clean up now-deprecated code, and get clinic select to properly populate based on url params

* follow better pattern for clinic options dropdown

* rm unnecessary value

* no search limits on accountants patients returned, bc pagination handles it forus

* add missing css selectors

* harder check for search limit

* tfw you forget how method chaining actuall works

* add a test for search limit

--- a/app/javascript/styles/pagination.scss
+++ b/app/javascript/styles/pagination.scss
@@ -2,12 +2,12 @@
 
 @import './_variables';
 
-span.page, span.next, span.last {
+span.page, span.first, span.prev, span.next, span.last {
   font-size: $font-size;
   margin-right: .5rem;
 }
 
-.accountants-pagination {
+#accountants-pagination {
   .pagination-entries {
     font-size: $font-size;
     display: inline-block;
